# clarity

./: .gitignore  EVALUATION.md  LOCAL_SETUP.md  NOTES.md  README.md  instrumentation-client.ts  manifest-dev.json  manifest-prod.json  manifest.json  next.config.ts  package-lock.json  package.json  revert-changes.sh  tailwind.config.js  test.js  trigger.config.ts  tsconfig.json  vercel.json
docs/: auto-coaching.mdx  billing.mdx  (+8 more)
evals/: README.md  config.py  evaluate.py  evaluator.py  generate.py  generate_default.py  judge.py  pyproject.toml  run_pipeline.py  setup.sh  step1_workspaces.py  step2_scenarios.py  step3_messages.py  train.py
evals/config/: evaluate.py  generate.py  train.py
evals/data/: eval_results.json  eval_summary.json  final_output.json  prompt_epoch_0.txt  prompt_epoch_1.txt  prompt_epoch_2.txt  prompt_epoch_3.txt  prompt_epoch_4.txt  prompt_epoch_5.txt  step1_workspaces.json  step2_scenarios.json  step3_messages.json  training_log.json
evals/data/evaluate/: epoch_1.json  epoch_2.json  epoch_3.json  epoch_4.json  epoch_5.json
evals/data/evaluate/prompts/: epoch_1.txt  epoch_2.txt  epoch_3.txt  epoch_4.txt  epoch_5.txt
evals/data/generate/: dataset.json  flags.json  scenarios.json
evals/data/human-annotations/: annotations.json
evals/data/train/run_1/: failures.json  metrics.json  results.json  taxonomy.json
evals/data/train/run_2/: failures.json  metrics.json  prompt.txt  results.json  taxonomy.json
evals/data/train/run_3/: failures.json  metrics.json  prompt.txt  results.json
evals/prompts/: evaluate.py  generate.py  train.py
(+104 files in other folders)
